--- a/Airbnb.ipynb
+++ b/Airbnb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrGO8DAu5AdAcQFCc4kCDU",
+      "authorship_tag": "ABX9TyNsCrAz51k5sW7+1QUPhxRW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,8 +23,45 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/joaovitor-lemes/Dados-de-Nova-York-do-Airbnb/blob/main/Airbnb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/joaovitor-lemes/Projetos/blob/main/Airbnb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Analisando Dados do Airbnb da cidade de Nova York"
+      ],
+      "metadata": {
+        "id": "S51hltIa8fh1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O [Airbnb](https://www.airbnb.com.br/) já é considerado como sendo a **maior empresa hoteleira da atualidade**. Ah, o detalhe é que ele **não possui nenhum hotel**!\n",
+        "\n",
+        "Conectando pessoas que querem viajar (e se hospedar) com anfitriões que querem alugar seus imóveis de maneira prática, o Airbnb fornece uma plataforma inovadora para tornar essa hospedagem alternativa.\n",
+        "\n",
+        "No final de 2018, a Startup fundada 10 anos atrás, já havia **hospedado mais de 300 milhões** de pessoas ao redor de todo o mundo, desafiando as redes hoteleiras tradicionais.\n",
+        "\n",
+        "Uma das iniciativas do Airbnb é disponibilizar dados do site, para algumas das principais cidades do mundo. Por meio do portal [Inside Airbnb](http://insideairbnb.com/get-the-data.html), é possível baixar uma grande quantidade de dados para desenvolver projetos e soluções de *Data Science*.\n",
+        "\n",
+        "<center><img alt=\"Analisando Airbnb\" width=\"10%\" src=\"https://www.area360.com.au/wp-content/uploads/2017/09/airbnb-logo.jpg\"></center>\n",
+        "\n",
+        "**Neste *notebook*, iremos analisar os dados referentes à cidade de Nova York, e ver quais insights podem ser extraídos a partir de dados brutos.**"
+      ],
+      "metadata": {
+        "id": "04Kuu14tIVkO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oYbEKp5tIU6g"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
