--- a/Airbnb.ipynb
+++ b/Airbnb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsCrAz51k5sW7+1QUPhxRW",
+      "authorship_tag": "ABX9TyPl+TAlP25EYRwro8oeuath",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,23 +55,37 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Obtenção dos Dados\n",
+        "\n",
+        "Todos os dados usados aqui foram obtidos a partir do site [Inside Airbnb](http://insideairbnb.com/get-the-data.html).\n",
+        "\n",
+        "Para esta análise exploratória inicial, será baixado apenas o seguinte arquivo:\n",
+        "\n",
+        "* `listings.csv` - *Summary information and metrics for listings in Nova York (good for visualisations).*\n",
+        "\n",
+        "Importante: O portal está em constante evolução, e em determinado momento, pode ser que o [conjunto de dados](http://data.insideairbnb.com/brazil/rj/rio-de-janeiro/2021-04-26/visualisations/listings.csv) exato utilizado nesse notebook não esteja mais disponível, o que quebraria nosso código."
+      ],
       "metadata": {
-        "id": "oYbEKp5tIU6g"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "JeMKsnnz6J5z"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "NP8lm1HQtZIG"
       },
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "# Inicialmente vamos importar as Bibliotecas que serão utilizadas no projeto\n",
+        "\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
       ]
     },
     {
@@ -86,9 +100,9 @@
           "height": 556
         },
         "id": "zVV5Dc9Ftba2",
-        "outputId": "bc6cfa34-c13b-4de9-c095-ac675a40ac95"
+        "outputId": "ee26051f-1bf5-48f3-a03b-df041a289214"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,7 +145,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2820279b-2c6c-436e-8925-ae957336b55f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e119f9ed-8271-4616-b8e7-06d3dba7ad78\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -282,7 +296,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2820279b-2c6c-436e-8925-ae957336b55f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e119f9ed-8271-4616-b8e7-06d3dba7ad78')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -334,12 +348,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2820279b-2c6c-436e-8925-ae957336b55f button.colab-df-convert');\n",
+              "        document.querySelector('#df-e119f9ed-8271-4616-b8e7-06d3dba7ad78 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2820279b-2c6c-436e-8925-ae957336b55f');\n",
+              "        const element = document.querySelector('#df-e119f9ed-8271-4616-b8e7-06d3dba7ad78');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -359,8 +373,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3c696fd6-4ab2-46a0-971d-d7a43e602e0c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3c696fd6-4ab2-46a0-971d-d7a43e602e0c')\"\n",
+              "<div id=\"df-921a931c-0d4e-485c-a972-9d07f0e2ec47\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-921a931c-0d4e-485c-a972-9d07f0e2ec47')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -479,7 +493,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3c696fd6-4ab2-46a0-971d-d7a43e602e0c button');\n",
+              "        document.querySelector('#df-921a931c-0d4e-485c-a972-9d07f0e2ec47 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -496,9 +510,18 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "n0gPNRN65p3V"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
