--- a/Analise_de_Dados_do_Airbnb_em_Nova_York.ipynb
+++ b/Analise_de_Dados_do_Airbnb_em_Nova_York.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdM9jQLcAtv4wd6DWc6MD7",
+      "authorship_tag": "ABX9TyMepd6Upet06p8KvDxhj/XF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1537,7 +1537,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Percebe-se que mesmo retirando os dados com preço maior do que 1000 ainda é possível identificar alguns *outliers*, entretanto, é possível entender que o perço até 1000 se trata do valor de imóveis mais caros."
+        "Percebe-se que mesmo retirando os dados de `price` maior do que 1000 ainda é possível identificar alguns *outliers*, entretanto, é possível entender que o preço até 1000 se trata do valor de imóveis mais caros."
       ],
       "metadata": {
         "id": "oQtQrWJ1w9dB"
@@ -1576,7 +1576,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "É possível identificar ainda alguns outliers, isso porque a maioria dos dados de minimum_nights são 30 dias, entretanto alguns imóveis aceitam estadias menores do que 30 dias em seu contrato."
+        "É possível identificar ainda alguns outliers, isso porque a maioria dos dados de `minimum_nights` são 30 dias, entretanto alguns imóveis aceitam estadias menores do que 30 dias em seu contrato."
       ],
       "metadata": {
         "id": "rHAkSGGrx58M"
