--- a/Segmentacao_de_Clientes.ipynb
+++ b/Segmentacao_de_Clientes.ipynb
@@ -5008,56 +5008,59 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
+          "height": 394
         },
         "id": "8rgvaN_reGwo",
-        "outputId": "6b7b2b77-818d-4afc-a32b-d4f9ba9fd5de"
+        "outputId": "ec372b74-5953-4cae-9584-4af65a13737c"
       },
-      "execution_count": 43,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   level_0  index  cdcli  recencia  frerquenciareq  valortot   Cluster  \\\n",
-              "0        0      0      2       176              46    5693.85        2   \n",
-              "1        1      1      6      1183               3     179.80        0   \n",
-              "2        2      2     13      1740               3     160.40        0   \n",
-              "3        3      3     31         5              15    2206.90        3   \n",
-              "4        4      4     32      1262              36    4957.06        4   \n",
-              "5        5      5     36      1740               2      95.00        0   \n",
-              "6        6      6     37       827               2     120.00        1   \n",
-              "7        7      7     66       359              21    2887.00        4   \n",
-              "8        8      8     77       932               4     617.00        1   \n",
-              "9        9      9     79      1639               4     398.00        0   \n",
+              "       level_0  index  recencia  frerquenciareq  valortot   Cluster  \\\n",
+              "cdcli                                                                 \n",
+              "2            0      0       176              46    5693.85        2   \n",
+              "6            1      1      1183               3     179.80        0   \n",
+              "13           2      2      1740               3     160.40        0   \n",
+              "31           3      3         5              15    2206.90        3   \n",
+              "32           4      4      1262              36    4957.06        4   \n",
+              "36           5      5      1740               2      95.00        0   \n",
+              "37           6      6       827               2     120.00        1   \n",
+              "66           7      7       359              21    2887.00        4   \n",
+              "77           8      8       932               4     617.00        1   \n",
+              "79           9      9      1639               4     398.00        0   \n",
               "\n",
-              "            Cliente  R_Quartile  F_Quartile  M_Quartile  RFMScore  \\\n",
-              "0   Cliente Premium           1           1           1       111   \n",
-              "1    Cliente Bronze           3           2           3       323   \n",
-              "2    Cliente Bronze           3           2           3       323   \n",
-              "3      Cliente Ouro           1           2           2       122   \n",
-              "4  Cliente Platinum           3           1           2       312   \n",
-              "5    Cliente Bronze           3           3           4       334   \n",
-              "6     Cliente Prata           3           3           3       333   \n",
-              "7  Cliente Platinum           2           2           2       222   \n",
-              "8     Cliente Prata           3           2           2       322   \n",
-              "9    Cliente Bronze           3           2           2       322   \n",
+              "                Cliente  R_Quartile  F_Quartile  M_Quartile  RFMScore  \\\n",
+              "cdcli                                                                   \n",
+              "2       Cliente Premium           1           1           1       111   \n",
+              "6        Cliente Bronze           3           2           3       323   \n",
+              "13       Cliente Bronze           3           2           3       323   \n",
+              "31         Cliente Ouro           1           2           2       122   \n",
+              "32     Cliente Platinum           3           1           2       312   \n",
+              "36       Cliente Bronze           3           3           4       334   \n",
+              "37        Cliente Prata           3           3           3       333   \n",
+              "66     Cliente Platinum           2           2           2       222   \n",
+              "77        Cliente Prata           3           2           2       322   \n",
+              "79       Cliente Bronze           3           2           2       322   \n",
               "\n",
-              "                                Classe  \n",
-              "0                              Campeão  \n",
-              "1              Cliente quase esquecido  \n",
-              "2              Cliente quase esquecido  \n",
-              "3  Cliente Novo que já conhece a marca  \n",
-              "4                              Avaliar  \n",
-              "5              Cliente de Compra Única  \n",
-              "6              Cliente de Compra Única  \n",
-              "7                    Cliente Hibernado  \n",
-              "8              Cliente quase esquecido  \n",
-              "9              Cliente quase esquecido  "
+              "                                    Classe  \n",
+              "cdcli                                       \n",
+              "2                                  Campeão  \n",
+              "6                  Cliente quase esquecido  \n",
+              "13                 Cliente quase esquecido  \n",
+              "31     Cliente Novo que já conhece a marca  \n",
+              "32                                 Avaliar  \n",
+              "36                 Cliente de Compra Única  \n",
+              "37                 Cliente de Compra Única  \n",
+              "66                       Cliente Hibernado  \n",
+              "77                 Cliente quase esquecido  \n",
+              "79                 Cliente quase esquecido  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1972128d-eb57-4050-a6e4-816829288a8f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-25f7b754-8e32-490a-88b3-7b4ecc68b7b3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -5078,7 +5081,6 @@
               "      <th></th>\n",
               "      <th>level_0</th>\n",
               "      <th>index</th>\n",
-              "      <th>cdcli</th>\n",
               "      <th>recencia</th>\n",
               "      <th>frerquenciareq</th>\n",
               "      <th>valortot</th>\n",
@@ -5090,13 +5092,27 @@
               "      <th>RFMScore</th>\n",
               "      <th>Classe</th>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cdcli</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
+              "      <th>2</th>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
-              "      <td>2</td>\n",
               "      <td>176</td>\n",
               "      <td>46</td>\n",
               "      <td>5693.85</td>\n",
@@ -5109,10 +5125,9 @@
               "      <td>Campeão</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
+              "      <th>6</th>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>6</td>\n",
               "      <td>1183</td>\n",
               "      <td>3</td>\n",
               "      <td>179.80</td>\n",
@@ -5125,10 +5140,9 @@
               "      <td>Cliente quase esquecido</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
+              "      <th>13</th>\n",
               "      <td>2</td>\n",
               "      <td>2</td>\n",
-              "      <td>13</td>\n",
               "      <td>1740</td>\n",
               "      <td>3</td>\n",
               "      <td>160.40</td>\n",
@@ -5141,10 +5155,9 @@
               "      <td>Cliente quase esquecido</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
+              "      <th>31</th>\n",
               "      <td>3</td>\n",
               "      <td>3</td>\n",
-              "      <td>31</td>\n",
               "      <td>5</td>\n",
               "      <td>15</td>\n",
               "      <td>2206.90</td>\n",
@@ -5157,10 +5170,9 @@
               "      <td>Cliente Novo que já conhece a marca</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
+              "      <th>32</th>\n",
               "      <td>4</td>\n",
               "      <td>4</td>\n",
-              "      <td>32</td>\n",
               "      <td>1262</td>\n",
               "      <td>36</td>\n",
               "      <td>4957.06</td>\n",
@@ -5173,10 +5185,9 @@
               "      <td>Avaliar</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5</th>\n",
+              "      <th>36</th>\n",
               "      <td>5</td>\n",
               "      <td>5</td>\n",
-              "      <td>36</td>\n",
               "      <td>1740</td>\n",
               "      <td>2</td>\n",
               "      <td>95.00</td>\n",
@@ -5189,10 +5200,9 @@
               "      <td>Cliente de Compra Única</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>6</th>\n",
+              "      <th>37</th>\n",
               "      <td>6</td>\n",
               "      <td>6</td>\n",
-              "      <td>37</td>\n",
               "      <td>827</td>\n",
               "      <td>2</td>\n",
               "      <td>120.00</td>\n",
@@ -5205,10 +5215,9 @@
               "      <td>Cliente de Compra Única</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>7</th>\n",
+              "      <th>66</th>\n",
               "      <td>7</td>\n",
               "      <td>7</td>\n",
-              "      <td>66</td>\n",
               "      <td>359</td>\n",
               "      <td>21</td>\n",
               "      <td>2887.00</td>\n",
@@ -5221,10 +5230,9 @@
               "      <td>Cliente Hibernado</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>8</th>\n",
+              "      <th>77</th>\n",
               "      <td>8</td>\n",
               "      <td>8</td>\n",
-              "      <td>77</td>\n",
               "      <td>932</td>\n",
               "      <td>4</td>\n",
               "      <td>617.00</td>\n",
@@ -5237,10 +5245,9 @@
               "      <td>Cliente quase esquecido</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>9</th>\n",
+              "      <th>79</th>\n",
               "      <td>9</td>\n",
               "      <td>9</td>\n",
-              "      <td>79</td>\n",
               "      <td>1639</td>\n",
               "      <td>4</td>\n",
               "      <td>398.00</td>\n",
@@ -5258,7 +5265,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1972128d-eb57-4050-a6e4-816829288a8f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-25f7b754-8e32-490a-88b3-7b4ecc68b7b3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5310,12 +5317,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1972128d-eb57-4050-a6e4-816829288a8f button.colab-df-convert');\n",
+              "        document.querySelector('#df-25f7b754-8e32-490a-88b3-7b4ecc68b7b3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1972128d-eb57-4050-a6e4-816829288a8f');\n",
+              "        const element = document.querySelector('#df-25f7b754-8e32-490a-88b3-7b4ecc68b7b3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -5335,8 +5342,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f074c768-f787-48fc-8e88-26ebec2658de\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f074c768-f787-48fc-8e88-26ebec2658de')\"\n",
+              "<div id=\"df-a1b38166-f685-43df-b148-802812ffd5bb\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a1b38166-f685-43df-b148-802812ffd5bb')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5455,7 +5462,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f074c768-f787-48fc-8e88-26ebec2658de button');\n",
+              "        document.querySelector('#df-a1b38166-f685-43df-b148-802812ffd5bb button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -5471,7 +5478,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 47
         }
       ]
     }
