--- a/Series_Temporais.ipynb
+++ b/Series_Temporais.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLDIS/SRgi8UjLH1uMS4FW",
+      "authorship_tag": "ABX9TyMV5oO6PL9S67njIa+bmbvT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1557,11 +1557,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pelas análises dos erros feitas, percebe-se que o modelo Smoothing Exponentional foi o que apresentou menor erro, trazendo uma previsão mais assertiva, isso é comprovado pelo baixo valor de MAPE = 0.02, sendo observado uma diminuição significativa do erro quando comparado aos demais erros dos modelos de previsões realizados."
+        "Pelas análises dos erros feitas, percebe-se que o modelo Exponentional Smoothing  foi o que apresentou menor erro, trazendo uma previsão mais assertiva, isso é comprovado pelo baixo valor de MAPE = 0.02, sendo observado uma diminuição significativa do erro quando comparado aos demais erros dos modelos de previsões realizados."
       ],
       "metadata": {
         "id": "Bxh1aX0Ydq1T"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "08XN6fILoviB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
